
[package]
name = "imop"
version = "0.1.0"
authors = ["romnn <contact@romnn.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "imop"
path = "src/cli.rs"

[dependencies]
image = "0.24"
clap = { version = "3.1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["io"] }
# warp = { version = "0.3", features = ["multipart", "compression"] }
warp = { version = "0.3", features = ["multipart"] }
async-compression = { version = "0.3.7", features = ["tokio", "brotli", "deflate", "gzip"], optional = true }
anyhow = "1.0"
serde_json = "1.0"
lazy_static = "1.4.0"
futures-util = "0.3.21"
urlencoding = "2.1.0"
http = "0.2"
http-headers = { version = "0.3", package = "headers" }
mime_guess = "2.0.0"
bytes = "1.0"
pin-project = "1"
itertools = "0.10.3"
thiserror = "1"

[features]
default = ["compression"]
compression = ["async-compression"]
