[package]
name = "imop"
version = "0.0.1"
authors = ["romnn <contact@romnn.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "3", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
# warp = { version = "0.3", features = ["multipart", "compression"] }
warp = { version = "0.3", features = ["multipart"] }
async-compression = { version = "0.3", features = ["tokio", "brotli", "deflate", "gzip"], optional = true }
async-trait = "0"
serde_json = "1"
lazy_static = "1"
# futures = "0.3"
# futures-util = "0.3"
# parking_lot = "0.12"
num-traits = "0.2"
# digest = "0.10"
# base64 = "0.13"
futures = "0.3"
urlencoding = "2"
reqwest = { version = "0.11", features = [ "stream" ] }
http = "0.2"
http-headers = { version = "0.3", package = "headers" }
mime_guess = "2"
bytes = "1"
pin-project = "1"
# itertools = "0.10"
thiserror = "1"

# c
# image backend
image = "0"

# cache
caches = { version = "0.2", optional = true }
linked_hash_set = { version = "0.1", optional = true }
lru = { version = "0.7", optional = true }
# serde_json
# serde_cbor
# flate
serde_cbor = { version = "0", optional = true }
rmp-serde = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
pretty_assertions = "1"
criterion = "0.4"
tempfile = "3"
anyhow = "1"

[features]
# todo: make image a custom backend
default = ["cache", "compression"]
compression = ["dep:async-compression"]
cache = [
  "dep:caches",
  "dep:linked_hash_set",
  "dep:lru",
  "dep:serde_cbor",
  "dep:rmp-serde",
  "dep:sha2",
]

[package.metadata.cargo-feature-combinations]
denylist = ["default"]
